<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context="com.ragulhari.guiaSus.AboutFragment">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_about"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tcu_marca"
                android:id="@+id/marca_tcu"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/marca_tcu"/>

            <ImageView
                android:layout_width="227dp"
                android:layout_height="200dp"
                android:id="@+id/logo_desafio_civico"
                android:contentDescription="@string/logo_desafio_civico"
                android:src="@drawable/logo_desafio_civico"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo_tcu"
                android:contentDescription="@string/tcu_logo"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_tcu"/>


    </LinearLayout>
</ScrollView>